(lang dune 3.17)

(name aoc24)

(generate_opam_files true)

(source
 (github AestheticSkye/aoc24))

(authors "Skyla <skyla@alessian.org>")

(package
 (name aoc24)
 (synopsis "An OCaml project for Advent of Code 2024")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
